# roowet-semantic-vault-search

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SOUL.md  pyproject.toml  read.md  requirements.txt  setup.bat  setup.sh
docs/: ARCHITECTURE.md
indexer/: vault_indexer.py
mcp_server/: server.py
skills/scanthissession/: SKILL.md
skills/skill/scanthissession/: SKILL.md
vault-structure/: README.md  obsidian-setup.md
vault-structure/06-SYSTEM/rules/: agent-writing-rules.md  moc-creation.md  naming-convention.md  routing-table.md
vault-structure/06-SYSTEM/templates/: template-analysis.md  template-comparison.md  template-concept.md  template-connection-report.md  template-daily.md  template-decision.md  template-entity.md  template-error.md  template-fact.md  template-index.md  template-knowledge.md  template-log.md  template-memory.md  template-mistake.md  template-moc.md  template-note.md  template-pattern.md  template-permanent-note.md  template-project.md  template-prompt.md  template-raw.md  template-research.md  template-resource.md  template-session.md  template-synthesis.md  template-tool.md  template-topic.md  template-trading.md
